Fix entities.json path in viewer templates
- Changed fetch path from 'entities.json' to 'data/entities.json'
- Updated all template viewers (systems, research, ecosystem)
- Fixes 404 error when loading the visualization
- Aligns with actual data directory structure

--- a/examples/systems-map-example/viewer.html
+++ b/examples/systems-map-example/viewer.html
@@ -671,7 +671,7 @@
         // Load entities.json dynamically
         async function loadEntities() {
             try {
-                const response = await fetch('entities.json');
+                const response = await fetch('data/entities.json');
                 if (!response.ok) {
                     throw new Error(`Failed to load entities.json: ${response.status}`);
                 }
